--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 		padding: 0;
 		overflow: hidden;
 	 }
+	body{
+			 background-image: url(img/background.png);
+			 
+	}
+	
 	 .div{
-		 position: absolute;
-		 width: 1898px;
-		 height: 1080px;
+		 position: relative;
+		 width: 1549px;
+		 height: 1149px;
 		 margin: 0 auto;
 		 display: block;
 	 }
@@ -49,10 +54,7 @@
 			animation-fill-mode: forwards;
 	 		}
 
-	 body{
-		 background-image: url(img/background.png);
-	 }
-	 
+	
 	
 	 .image2:hover{
 		 transform:scale(0.6);
@@ -75,7 +77,8 @@
 			<div class="div">
 				<div class="left">
 					<img class="image1" src="img/welcome.png"/>
-					<img class="image2" src="img/start.png" />
+					<a href="list.html"><img class="image2" src="img/start.png" /></a>
+					
 					</div>
 				<div class="right">
 					<img class="image3" src="img/illustration.png"/>
